choose language details

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #body-br {
   padding : 10px ;
-  background-image: url("../img/bg-sw1.jpg");
+  background-image: url("../img/bg-brazil.jfif");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -9,7 +9,7 @@
 
 #body-ca {
   padding : 10px ;
-  background-image: url("../img/bg-sw2.jpg");
+  background-image: url("../img/bg-canada.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
