--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,50 +1,77 @@
 body {
     background-color: #31343f;
+    min-height: 100%;
 }
 
-.lang-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.container {
+      margin: 4% auto;
+      width: 210px;
+      height: 140px;
+      position: relative;
+      perspective: 1000px;
 }
 
-p {
-    text-align: center;
-    font-family: monospace;
-    color: aquamarine;
-    font-size: 20px;
+h1 {
+      text-align: center;
+      font-family: monospace;
+      color: darkorange;
+} 
+
+.container {
+	margin: 4% auto;
+	width: 210px;
+	height: 140px;
+	position: relative;
+	perspective: 1000px;
 }
 
-img {
-    max-width: 300px;
-    max-height: 225px;
-    margin: 15px;
-    border-radius: 5px;
+#carousel {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform-style: preserve-3d;
+	animation: rotation 20s infinite linear;
 }
 
-img:hover {
+#carousel:hover {
+	animation-play-state: paused;
+}
+
+#carousel figure {
+	display: block;
+	position: absolute;
+	width: 186px;
+	height: 137px;
+	left: 10px;
+	top: 10px;
+	background: black;
+	overflow: hidden;
+	border: solid 5px black;
+}
+
+  #carousel figure:nth-child(1) { transform: rotateY(0deg) translateZ(288px);}
+  #carousel figure:nth-child(2) { transform: rotateY(45deg) translateZ(288px);}
+  #carousel figure:nth-child(3) { transform: rotateY(90deg) translateZ(288px);}
+  #carousel figure:nth-child(4) { transform: rotateY(135deg) translateZ(288px);}
+  #carousel figure:nth-child(5) { transform: rotateY(180deg) translateZ(288px);}
+  #carousel figure:nth-child(6) { transform: rotateY(225deg) translateZ(288px);}
+  #carousel figure:nth-child(7) { transform: rotateY(270deg) translateZ(288px);}
+  #carousel figure:nth-child(8) { transform: rotateY(315deg) translateZ(288px);}
+  
+  img {
+      cursor: pointer;
+      transition: all .5s ease;
+  }
+
+  img:hover {
     transform: scale(1.1);
-    box-shadow: 5px 10px 8px black;
-}
-
-@media (max-width: 1328px) {
-    img {
-        max-width: 200px;
-        max-height: 150px;
-    }
-}
-
-@media (max-width: 930px) {
-    img {
-        max-width: 160px;
-        max-height: 120px;
-    }
-}  
-
-@media (max-width: 770px) {
-    img {
-        max-width: 200px;
-        max-height: 150px;
-    }
-}
+  }
+  
+  @keyframes rotation {
+      from {
+          transform: rotateY(0deg);
+      }
+      to {
+          transform: rotateY(360deg);
+      }
+  }
